--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dependencies": {
         "@fluentui/react-northstar": "^0.49.0",
         "@microsoft/teams-js": "^1.6.0",
+        "bootstrap": "^4.6.0",
         "react": "^16.13.1",
+        "react-bootstrap": "^1.5.2",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.1.2",
         "react-scripts": "^4.0.3"
