--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "private": true,
     "dependencies": {
         "@fluentui/react-northstar": "^0.49.0",
+        "@microsoft/mgt": "^2.1.0",
+        "@microsoft/mgt-react": "^2.1.0",
         "@microsoft/teams-js": "^1.6.0",
         "bootstrap": "^4.6.0",
         "react": "^16.13.1",
