--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dependencies": {
         "@fluentui/react-northstar": "^0.49.0",
         "@microsoft/mgt": "^2.1.0",
+        "@microsoft/mgt-element": "^2.1.0",
+        "@microsoft/mgt-msal-provider": "^2.1.0",
         "@microsoft/mgt-react": "^2.1.0",
         "@microsoft/teams-js": "^1.6.0",
         "bootstrap": "^4.6.0",
