--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     },
     "private": true,
     "dependencies": {
+        "@azure/msal-browser": "^2.14.1",
         "@fluentui/react-northstar": "^0.49.0",
         "@microsoft/mgt": "^2.1.0",
         "@microsoft/mgt-element": "^2.1.0",
         "@microsoft/mgt-msal-provider": "^2.1.0",
         "@microsoft/mgt-react": "^2.1.0",
+        "@microsoft/microsoft-graph-client": "^2.2.1",
         "@microsoft/teams-js": "^1.6.0",
         "bootstrap": "^4.6.0",
         "react": "^16.13.1",
@@ -35,5 +37,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@microsoft/microsoft-graph-types": "^1.36.0"
     }
 }
