--- a/appPackage/manifest.json
+++ b/appPackage/manifest.json
@@ -26,7 +26,7 @@
     "staticTabs": [
         {
             "entityId": "index",
-            "name": "Personal Tab",
+            "name": "Events Manager",
             "contentUrl": "https://localhost:3000/tab",
             "websiteUrl": "https://localhost:3000/tab",
             "scopes": [
