--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "time-zone-converter": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
