--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "importHelpers": true,
-    "removeComments": true,
+    "removeComments": true
   },
   "include": [
     "src"
